pxc/tests/todo_04_root/guard1.px

namespace guard1;

function void test1() {
  function void foo(vector{int}& vec, int& v) {
    vec.resize(100); // error
  }
  vector{int} v;
  v.resize(10);
  foo(v, v[1]);
}

test1();

